--- a/index.html
+++ b/index.html
@@ -21,12 +21,38 @@
       <input type="text" class="form-control" id="searchUser" placeholder="GitHub Username">
     </div>
     <br>
-    <div id="profile"></div>
+    <div id="profile">
+      <!-- <div class="card card-body">
+        <div class="row">
+          <div class="col-md-3">
+            <img src="${user.avatar_url}" alt="" class="img-fluid mb-2">
+            <a href="${user.html_url}" target="_blank" class="btn btn-primary btn-block mb-4">View Profile</a>
+          </div>
+          <div class="col-md-9">
+            <span class="badge bg-primary">Public Repos: ${user.public_repos}</span>
+            <span class="badge bg-success">Followers: ${user.followers}</span>
+            <span class="badge bg-secondary">Following: ${user.following}</span>
+            <br><br>
+            <ul class="list-group">
+              <li class="list-group-item">Company: ${user.company}</li>
+              <li class="list-group-item">Blog: ${user.blog}</li>
+              <li class="list-group-item">Location: ${user.location}</li>
+              <li class="list-group-item">Member Since: ${user.created_at}</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <br>
+      <h3 class="page-heading mb-3">Latest Repos</h3> -->
+    </div>
   </div>
 
   <footer class="mt-5 p-3 text-center border-top border-bottom">
     GitHub Finder &copy;
   </footer>
+
+
+
   
 
   <script src="github.js"></script>
