--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
       <br>
       <h3 class="page-heading mb-3">Latest Repos</h3> -->
     </div>
+    <div id="repos">
+<!-- <div class="card card-body mb-2">
+    <div class="row">
+      <div class="col-md-6">
+        <a href="${repo.html_url}" target="_blank">${repo.name}</a>
+      </div>
+      <div class="col-md-6">
+        <span class="badge bg-primary">Stars: ${repo.stargazers_count}</span>
+        <span class="badge bg-success">Watchers: ${repo.watchers_count}</span>
+        <span class="badge bg-secondary">Forks: ${repo.forks_count}</span>
+      </div>
+    </div>
+  </div> -->
+    </div>
   </div>
 
   <footer class="mt-5 p-3 text-center border-top border-bottom">
